--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ header {
     color: #C9DAEA;
     padding: 1em;
     grid-area: header;
+    position: relative;
 }
 
 nav {
@@ -49,45 +50,3 @@ nav ul {
     padding: 0.6em;
 }
 
-.circle {
-    width: 10em;
-    height: 10em;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    animation: rotate 10s infinite; 
-    top: 50%;
-    left: 50%;
-    position: relative
-    transform: translate(50%,50%);
-}
-.circle img {
-    width: 100%; 
-    height: auto;
-    border-radius: 50%; 
-    margin: auto;
-    grid-area: main;
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;
-}
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-main {
-    background-color: #C9DAEA;
-    color: #191516;
-    grid-area: main;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    flex-direction: column; 
-    padding: 2em; 
-    height: 80vh; 
-}
