--- a/mobile.css
+++ b/mobile.css
@@ -16,13 +16,12 @@
 body {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: auto;
+    grid-template-rows: auto auto 1fr auto;
     grid-template-areas:
         "header"
         "main"
         "aside"
-        "footer"
-    ;
+        "footer";
 
     background-color: #C9DAEA;
 }
@@ -39,20 +38,23 @@ nav {
     background-color: #00b295;
     position: fixed;
     top: 0;
-    left: 50%;
+    left: 30%;
     width: 50%;
-    height: 100vh;
-    padding: 1em;
+    height: 80vh;
+    padding: 0.5em;
+    z-index: 1;
+    padding: 0.5em;
 }
 
 nav ul {
     display: block;
-    margin: 2em;
+    margin: 0;
     list-style: none;
 }
 
 nav ul li {
     margin-bottom: 1em;
+    display: inline; 
 }
 
 nav ul li a {
@@ -119,4 +121,44 @@ aside {
 nav>ul>li {
     position: relative;
     width: 100%;
+}
+.circle {
+    width: 10em;
+    height: 10em;
+    margin-top: 3em;
+    border-radius: 50%;
+    animation: rotate 10s infinite linear;
+    align-items: center; 
+    justify-content: center;
+    display: flex; 
+    margin-left: 15%;
+    margin-top: 0;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.circle img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    align-items: center; 
+    justify-content: center;
+    left: 50%;
+    right: 30%;
+}
+main {
+    grid-area: main;
+    display: flex;
+    background-color: #C9DAEA;
+    color: #191516;
+    padding: 20% 17%;
+    height: 40vh;
+    width: 90%;
 }
